# bm1397-protocol

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
examples/: serial.rs
src/: command.rs  core_register.rs  crc.rs  lib.rs  register.rs  registers.rs  response.rs  specifier.rs
