[package]
name = "bm1397-protocol"
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["no-std", "embedded-hal-driver", "mining", "bitcoin"]
description = "Rust protocol driver for the BM1397 Bitcoin Mining ASIC."
repository = "https://github.com/GPTechinno/bm1397-protocol"

[dependencies]
crc = "3.2.1"
defmt = { version = "0.3.8", optional = true }
fugit = "0.3.7"

[dev-dependencies]
serialport = { version="4.4.0", default-features = false}

[features]
defmt = ["dep:defmt", "fugit/defmt"]

[[example]]
name = "serial"
path = "examples/serial.rs"
dev-dependencies = ["serialport"]